# saucerer

./: README.md  pyproject.toml  pytest.ini
examples/: hu_tao.py
saucerer/: __init__.py  __main__.py  classes.py  cli.py  constants.py  exceptions.py  library.py  sync.py
tests/: test.py  test_api.py
