[tool.poetry]
name = "saucerer"
version = "0.5.1"
description = "A SauceNAO web scrapper written in Python"
authors = ["tretrauit <tretrauit@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.1"
aiohttp = {extras = ["speedups"], version = "^3.8.5"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-asyncio = "^0.20.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
